# rustin

./: .env  Cargo.toml  README.md  test.txt
src/: gg.rs  main.rs  pdf.rs  results.rs  ✍
